--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>메인 페이지</title>
 </head>
+
 <body>
 <h1>메인 페이지</h1>
 <p>이 사이트를 접속하면 제일 처음 만나는 페이지 입니다</p>
 <p>이 사이트에 처음 들어오는 요청은 무조건 모두 homecontroller의 index메소드를 거쳐야 하고
-다른 방식으로 우회해서 들어올 경우에도 로그인이 안되어 있다면 이 페이지로 자동으로 이동하게 되어야 합니다!!
-메인 페이지인만큼 여러가지 기능이 들어갈 생각입니다
+    다른 방식으로 우회해서 들어올 경우에도 로그인이 안되어 있다면 이 페이지로 자동으로 이동하게 되어야 합니다!!
+    메인 페이지인만큼 여러가지 기능이 들어갈 생각입니다
 </p>
+<!-- 헤더시작 -->
+<div class="header">
+    <div class="header-con">
+        <div class="header-top">
+            <ul>
+                <li>카테고리1</li>
+                <li>카테고리2</li>
+                <li>카테고리3</li>
+                <li>카테고리4</li>
+                <li>로그인</li>
+            </ul>
+        </div>
+        <div class="header-middle">
+            <div class="logo">
+                <h1>로고</h1>
+            </div>
+            <ul>
+                <li>home</li>
+                <li>카테고리1</li>
+                <li>카테고리2</li>
+                <li>검색?</li>
+            </ul>
+        </div>
+        <div class="header-nav">
+            <ul>
+                <li>카테고리1</li>
+                <li>카테고리2</li>
+                <li>카테고리3</li>
+                <li>카테고리4</li>
+                <li>카테고리5</li>
+                <li>카테고리6</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- 헤더 끝
+         뭔가 스크롤 내렸을때 고정되면서 화면 따라오는 기능 넣으면 좋을것같다!!-->
+
+<div class="content">
+    <div class="content-banner-"> <!--슬라이드 베너 들어갈 거임-->
+
+    </div>
+
+    <div class="content-weekly-item"> <!--주간 베스트 인기상품-->
+        <h1>금주의 인기 상품 8!!!</h1>
+        <ul>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+            <li>아이템1</li>
+        </ul>
+    </div>
+
+    <!-- 이하 메인에 추가하면 좋을 내용들 추가가능!! -->
+
+</div>
+
+<div class="footer">
+
+    <div class="inner">
+        <!--  -->
+        <div class="info-area">
+            <div class="info-area-title">
+                <span> 제목</span>
+            </div>
+            <div class="faq-area">
+                <span>FAQ</span>
+                <ul>
+                    <li>질문1</li>
+                    <li>질문1</li>
+                    <li>질문1</li>
+                    <li>질문1</li>
+                </ul>
+            </div>
+
+            
+
+        </div>
+    </div>
+
+</div>
+
 
 </body>
+
 </html>
