--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,22 @@
 
 <div class="content">
     <div class="content-banner-"> <!--슬라이드 베너 들어갈 거임-->
+        <div class="autoGallery">
+            <ul>
+                <li>item1</li>
+                <li>item1</li>
+                <li>item1</li>
+                <li>item1</li>
+                <li>item1</li>
+                <li>item1</li>
+            </ul>
+        </div>
+        <div class="bCon">
+            <ul>
+                <li class="on"></li>
+            </ul>
 
+        </div>
     </div>
 
     <div class="content-weekly-item"> <!--주간 베스트 인기상품-->
@@ -93,8 +108,7 @@
                 </ul>
             </div>
 
-            
-
+            <!-- 넣으면 좋을? 정보들?? 추가 -->
         </div>
     </div>
 
