--- a/src/main/resources/static/css/common/reset.css
+++ b/src/main/resources/static/css/common/reset.css
@@ -1,20 +1,15 @@
 *{
-  margin:0;
-  padding:0
+  margin: 0;
+  padding: 0;
 }
 html,body{
-  width:100%;
-  height:auto;
-}
-a{
-  text-decoration:none;
-  color:#000000;
+  width: 100%;
+  min-height:100%;
 }
 ul,li{
-  list-style:none;
+  list-style: none;
 }
-img{
-  width:100%;
-  border:0;
-  display:block;
+a{
+  text-decoration: none;
+  color: #000;
 }
