--- a/src/main/resources/templates/fragments/common/kreamHeader.html
+++ b/src/main/resources/templates/fragments/common/kreamHeader.html
@@ -6,10 +6,11 @@
       <div class="top-menu">
         <ul>
           <li><a th:href="@{/}">고객센터</a></li>
+          <li><a th:href="@{/notice/list}">공지사항</a></li>
           <li><a th:href="@{/}">내 정보(로그인 일떄)</a></li>
           <li><a th:href="@{/}">마이페이지(로그인 일떄)</a></li>
           <li><a th:href="@{/login}">로그인(비 로그인 일때)</a></li>
-          <li><a th:href="@{/}">회원가입비 로그인 일때</a></li>
+          <li><a th:href="@{/}">회원가입(비 로그인 일때)</a></li>
         </ul>
       </div>
     </div>
