--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -9,6 +9,7 @@
 <table class="product">
   <tr>
     <th class="table_id">번호</th>
+    <th class="table_img">썸네일</th>
     <th class="table_title">제목</th>
     <th class="table_writer">작성자</th>
     <th class="table_date">날짜</th>
@@ -16,8 +17,9 @@
   </tr>
   <!-- each -> 반복문 -->
   <!-- product -> 변수같은 개념 -->
-  <tr th:each="product: ${productList}" >
+  <tr th:each="product, stat: ${productList}" >
     <td th:text="${product.id}"></td>
+    <td><img th:src="@{/images/{filename}(filename=${productImages[stat.index].productImgSavedName})}" alt="" height="50"/></td>
     <td><a th:href="@{|/product/${product.id}|}" th:text="${product.productName}"></a></td>
     <td th:text="${product.productWriter}"></td>
     <td th:text="${#temporals.format(product.productCreateTime, 'yy/MM/dd HH:mm')}"></td>
