--- a/src/main/resources/templates/payment/paymentIndex.html
+++ b/src/main/resources/templates/payment/paymentIndex.html
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>payment test</title>
+    <title>결제 테스트</title>
 </head>
 <body>
-<h1>payment test</h1>
-<a href="/payment/kakao/pg?"></a>
+
+
+
 </body>
-
-<script>
-
-    var text = "";
-    fetch("http://localhost:8111/payment/kakao/pg?productId=123&memberId=123&productPrice=100000&productName=testProduct")
-    .then(res => res.json())
-    .then(json => {
-        text = json;
-        console.log(text.approvalUrl);
-        var link = text.approvalUrl;
-
-        location.href=link;
-        location.replace(link);
-        window.open(link);
-    });
-
-</script>
 </html>
